--- a/templates/change_recipe.html
+++ b/templates/change_recipe.html
@@ -103,6 +103,7 @@
             </div>
             <div class="form__footer">
                 <button class="button button_style_blue">Сохранить рецепт</button>
+                <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="single-card__text">Удалить рецепт</a></li>
             </div>
         </form>
     </div>
