--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
                 <li class="nav__item"><a href="{% url 'recipes:subs' user.username %}" class="nav__link link">Мои подписки</a></li>
                 <li class="nav__item"><a href="/new-recipe" class="nav__link link">Создать рецепт</a></li>
                 <li class="nav__item"><a href="{% url 'recipes:favors' user.username %}" class="nav__link link">Избранное</a></li>
-                <li class="nav__item"><a href="{% url 'recipes:shop' user.username %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter"></span></li>
+                <li class="nav__item"><a href="{% url 'recipes:shop' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ count }}</span></li>
 
             </ul>
             <ul class="nav__items list">
@@ -17,7 +17,7 @@
             {% else %}
             <ul class="nav__items list">
                 <li class="nav__item nav__item_active"><a href="/" class="nav__link link">Рецепты</a></li>
-                <li class="nav__item"><a href="{% url 'recipes:shop' user.username %}" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
+                <li class="nav__item"><a href="{% url 'recipes:shop' %}" class="nav__link link">Список покупок</a><span class="badge badge_style_blue nav__badge" id="counter">4</span></li>
             </ul>
             <ul class="nav__items list">
                 <li class="nav__item"><a href="/auth/login/" class="nav__link link">Войти</a></li>
