--- a/templates/my_subs.html
+++ b/templates/my_subs.html
@@ -18,40 +18,32 @@
     </div>
     <div class="card-list">
         {% for item in subs_list %}
-        <div class="card-user" data-id="{{ item.author.id }}">
+        <div class="card-user" data-author="{{ item.author.id }}">
             <div class="card-user__header">
-                <h2 class="card-user__title"> {{ item.author.first_name }} Чернова</h2>
+                <h2 class="card-user__title"> {{ item.author.first_name }} {{ item.author.last_name }}</h2>
             </div>
             <div class="card-user__body">
                 <ul class="card-user__items">
+                    {% for fitem in card_page %}
+                        {% for ritem in fitem|slice:":3" %}
+                            {% if ritem.author == item.author %}
+                            <li class="card-user__item">
+                                <div class="recipe">
+                                    <img src="{{ ritem.image.url }}" alt="{{ ritem.name }}" class="recipe__image">
+                                    <h3 class="recipe__title">{{ ritem.title }}</h3>
+                                    <p class="recipe__text"><span class="icon-time"></span> {{ ritem.duration }} мин.</p>
+                                </div>
+                            </li>
+                            {% endif %}
+                        {% endfor %}
+                    {% endfor %}
                     <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{{ recipe.recipe.image.url }}" alt="{{ recipe.name }}" class="recipe__image">
-                            <h3 class="recipe__title">{{ recipe.title }}</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> {{ follow.recipe.duration }} мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{{ recipe.recipe.image.url }}" alt="{{ recipe.name }}" class="recipe__image">
-                            <h3 class="recipe__title">{{ follow.recipe.title }}</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> {{ follow.recipe.duration }} мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <div class="recipe">
-                            <img src="{{ recipe.recipe.image.url }}" alt="{{ recipe.name }}" class="recipe__image">
-                            <h3 class="recipe__title">{{ follow.recipe.title }}</h3>
-                            <p class="recipe__text"><span class="icon-time"></span> {{ follow.recipe.duration }} мин.</p>
-                        </div>
-                    </li>
-                    <li class="card-user__item">
-                        <a href="#" class="card-user__link link">Еще 7 рецептов...</a>
+                        <a href="{% url 'recipes:profile' item.author.username %}" class="card-user__link link">Еще...</a>
                     </li>
                 </ul>
             </div>
             <div class="card-user__footer">
-                <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться</button>
+                <button class="button button_style_light-blue button_size_auto" name="subscribe">Отписаться </button>
             </div>
         </div>
         {% endfor %}
