--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -19,11 +19,13 @@
                 <div class="single-card__header-info">
                     <h1 class="single-card__title"> {{ recipe.title }} </h1>
                     <div class="single-card__favorite">
-                        {% if favor %}
-                        <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
-                        {% else %}
-                        <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
-                        <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                        {% if user.is_authenticated %}
+                            {% if favor %}
+                                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
+                            {% else %}
+                                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+                                <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
+                            {% endif %}
                         {% endif %}
                     </div>
                 </div>
@@ -44,8 +46,20 @@
                     </ul>
                 </div>
                 <ul class="single-card__items">
-                    <li class="single-card__item"><button class="button button_style_blue" name="purchpurchases" data-out><span class="icon-plus"></span> Добавить в покупки</button></li>
-                    <li class="single-card__item"><button class="button button_style_light-blue button_size_auto" name="subscribe" data-out>Подписаться на автора</button></li>
+                    {% if recipe.id in shop_list %}
+                    <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
+                    {% else %}
+                    <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+                    {% endif %}
+                    {% if user.username != profile.username %}
+                    {% if user.is_authenticated %}
+                        {% if subs %}
+                        <li class="single-card__item"><button class="button button_style_light-blue button_size_auto" name="subscribe"><span class="icon-check button__icon"></span> Отписаться от автора </button>
+                        {% else %}
+                        <li class="single-card__item"><button class="button button_style_light-blue button_size_auto" name="subscribe" data-out>Подписаться на автора</button></li>
+                        {% endif %}
+                        {% endif %}
+                    {% endif %}
                 </ul>
                 <div class="single-card__section">
                     <h3 class="single-card__section-title">Ингредиенты:</h3>
