--- a/templates/change_recipe.html
+++ b/templates/change_recipe.html
@@ -16,6 +16,7 @@
     <div class="main__header">
         <h1 class="main__title">Редактирование рецепта</h1>
     </div>
+    {{ form.errors }}
     <div class="form-container">
         <form class="form" method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -35,18 +36,17 @@
                 <p class="form__label">Теги</p>
                 <div class="form__field-group">
                     <div class="tags">
+                        {% for tag_choice, tag_value in form.tag.field.choices %}
                         <div class="tags__item">
-                            <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
-                            <label for="id_breakfast" class="tags__label">Завтрак</label>
+                            <input 
+                                type="checkbox" 
+                                name="tag" 
+                                value = "{{ tag_choice.instance.pk }}"
+                                id="id_{{ tag_choice.instance.value }}" 
+                                class="tags__checkbox tags__checkbox_style_{{ tag_choice.instance.style }}">
+                            <label for="id_{{ tag_choice.instance.value }}" class="tags__label">{{ tag_choice.instance.name }}</label>
                         </div>
-                        <div class="tags__item">
-                            <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
-                            <label for="id_lunch" class="tags__label">Обед</label>
-                        </div>
-                        <div class="tags__item">
-                            <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
-                            <label for="id_dinner" class="tags__label">Ужин</label>
-                        </div>
+                    {% endfor %}
                     </div>
                     <span class="form__error"></span>
                 </div>
@@ -63,6 +63,8 @@
                         <input type="number" id="cantidad" class="form__input" min="0">
                         <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
                     </div>
+                    <div class="form__field-group-ingredientes-container"></div>
+                    
                     <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
                     <span class="form__error"></span>
                 </div>
@@ -103,7 +105,7 @@
             </div>
             <div class="form__footer">
                 <button class="button button_style_blue">Сохранить рецепт</button>
-                <li class="single-card__item">  <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="single-card__text">Удалить рецепт</a></li>
+                <a style="margin-left: 2.5em" href="{% url 'recipes:recipe_delete' recipe.id %}" class="single-card__text">Удалить рецепт</a></li>
             </div>
         </form>
     </div>
