--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     {% load cache %}
     {% csrf_token %}
     {% load thumbnail %}
+    {% load templates_extra %}
     <link rel="stylesheet" href={% static 'pages/index.css' %}>
 </head>
 <body class="body">
@@ -18,18 +19,16 @@
         <div class="main__header">
             <h1 class="main__title">Рецепты</h1>
             <ul class="tags">
-                <li class="tags__item">
-                    <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="/recipes/?tag=breakfast"></a>
-                    <span class="tags__label">Завтрак</span>
-                </li>
-                <li class="tags__item">
-                    <a id="lunch" class="tags__checkbox tags__checkbox_style_green tags__checkbox_active" href="/recipes/?tag=lunch"></a>
-                    <span for="lunch" class="tags__label">Обед</span>
-                </li>
-                <li class="tags__item">
-                    <a id="dinner" class="tags__checkbox tags__checkbox_style_purple tags__checkbox_active" href="/recipes/?tag=dinner"></a>
-                    <label for="dinner" class="tags__label">Ужин</label>
-                </li>
+                    {% for tag in all_tags %}
+                        <li class="tags__item">
+                            <a
+                                id="{{ tag.pk }}"
+                                class="tags__checkbox tags__checkbox_style_{{ tag.style }}
+                                {% if tag.value in request.GET|get_filter_values %} tags__checkbox_active {% endif %}"
+                                href="/?{{ request|get_filter_link:tag }}"></a>
+                            <span class="tags__label">{{ tag.name }}</span>
+                        </li>
+                    {% endfor %}
             </ul>
         </div>
     {% cache 6 index_page %}
@@ -40,10 +39,12 @@
             <a href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" class="card__image"></a>
             <div class="card__body">
                 <a class="card__title link" href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" target="_blank"> {{ recipe.title }}</a>
+                
+                
                 <ul class="card__items">
-                    <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-                    <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-                    <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
+                    {% for tag in recipe.tag.all %}
+                    <li class="card__item"><span class="badge badge_style_{{ tag.style }}">{{ tag.name }}</span></li>
+                    {% endfor %}
                 </ul>
                 <div class="card__items card__items_column">
                     <p class="card__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
@@ -51,12 +52,13 @@
                 </div>
             </div>
             <div class="card__footer">
+                {% if user.is_authenticated %}
                 {% if recipe.id in shop_list %}
                     <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
                 {% else %}
                     <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
                 {% endif %}
-                
+                {% endif %}
                 {% if user.is_authenticated %}
                     {% if recipe.title in favor_list %}
                         <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
