--- a/templates/profile.html
+++ b/templates/profile.html
@@ -9,6 +9,7 @@
     {% load static %}
     {% load cache %}
     {% csrf_token %}
+    {% load templates_extra %}
     {% load thumbnail %}
     <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 </head>
@@ -18,18 +19,16 @@
         <div class="main__header">
             <h1 class="main__title">{{ profile.first_name }} {{ profile.last_name }} </h1>
             <ul class="tags">
-                <li class="tags__item">
-                    <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="#"></a>
-                    <span class="tags__label">Завтрак</span>
-                </li>
-                <li class="tags__item">
-                    <a id="lunch" class="tags__checkbox tags__checkbox_style_green tags__checkbox_active" href="#"></a>
-                    <span for="lunch" class="tags__label">Обед</span>
-                </li>
-                <li class="tags__item">
-                    <a id="dinner" class="tags__checkbox tags__checkbox_style_purple tags__checkbox_active" href="#"></a>
-                    <label for="dinner" class="tags__label">Ужин</label>
-                </li>
+                {% for tag in all_tags %}
+                        <li class="tags__item">
+                            <a
+                                id="{{ tag.pk }}"
+                                class="tags__checkbox tags__checkbox_style_{{ tag.style }}
+                                {% if tag.value in request.GET|get_filter_values %} tags__checkbox_active {% endif %}"
+                                href="/recipe/{{profile.username}}/?{{ request|get_filter_link:tag }}"></a>
+                            <span class="tags__label">{{ tag.name }}</span>
+                        </li>
+                    {% endfor %}
             </ul>
 
         </div>
@@ -49,15 +48,17 @@
         {% cache 6 index_page %}
     
         <div class="card-list">
-            {% for recipe in recipe_list %}
+            {% for recipe in page %}
         <div class="card" data-id="{{ recipe.id }}">
             <a href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" class="card__image"></a>
             <div class="card__body">
                 <a class="card__title link" href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" target="_blank"> {{ recipe.title }}</a>
                 <ul class="card__items">
-                    <li class="card__item"><span class="badge badge_style_green">Обед</span></li>
-                    <li class="card__item"><span class="badge badge_style_orange">Завтрак</span></li>
-                    <li class="card__item"><span class="badge badge_style_purple">Ужин</span></li>
+                    <ul class="card__items">
+                        {% for tag in recipe.tag.all %}
+                        <li class="card__item"><span class="badge badge_style_{{ tag.style }}">{{ tag.name }}</span></li>
+                        {% endfor %}
+                    </ul>
                 </ul>
                 <div class="card__items card__items_column">
                     <p class="card__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
