--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -35,28 +35,28 @@
         {% cache 6 index_page %}
     
         <div class="card-list">
-            {% for recipe in recipe_list %}
-        <div class="card" data-id="{{ recipe.recipe.id }}">
-            <a href="{% url 'recipes:recipe_view' recipe.recipe.author.username recipe.recipe.id %}" class="link" target="_blank"><img src="{{ recipe.recipe.image.url }}" alt="{{ recipe.recipe.name }}" class="card__image"></a>
+            {% for recipe in page %}
+        <div class="card" data-id="{{ recipe.id }}">
+            <a href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.name }}" class="card__image"></a>
             <div class="card__body">
-                <a class="card__title link" href="{% url 'recipes:recipe_view' recipe.recipe.author.username recipe.recipe.id %}" target="_blank"> {{ recipe.recipe.title }}</a>
+                <a class="card__title link" href="{% url 'recipes:recipe_view' recipe.author.username recipe.id %}" target="_blank"> {{ recipe.title }}</a>
                 <ul class="card__items">
-                    {% for tag in recipe.recipe.tag.all %}
+                    {% for tag in recipe.tag.all %}
                     <li class="card__item"><span class="badge badge_style_{{ tag.style }}">{{ tag.name }}</span></li>
                     {% endfor %}
                 </ul>
                 <div class="card__items card__items_column">
-                    <p class="card__text"><span class="icon-time"></span> {{ recipe.recipe.duration }} мин.</p>
-                    <p class="card__text"><span class="icon-user"></span> <a href="{% url 'recipes:profile' recipe.recipe.author.username %}" style="color: black">{{ recipe.recipe.author.first_name }} {{ recipe.recipe.author.last_name }}</a></p>
+                    <p class="card__text"><span class="icon-time"></span> {{ recipe.duration }} мин.</p>
+                    <p class="card__text"><span class="icon-user"></span> <a href="{% url 'recipes:profile' recipe.author.username %}" style="color: black">{{ recipe.author.first_name }} {{ recipe.author.last_name }}</a></p>
                 </div>
             </div>
             <div class="card__footer">
-                {% if recipe.recipe.id in shop_list %}
+                {% if recipe.id in shop_list %}
                     <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
                 {% else %}
                     <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
                 {% endif %}
-                {% if recipe.recipe.title in favor_list %}
+                {% if recipe.title in favor_list %}
                     <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
                 {% else %}
                     <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
