--- a/templates/my_subs.html
+++ b/templates/my_subs.html
@@ -17,7 +17,7 @@
         <h1 class="main__title">Мои подписки</h1>
     </div>
     <div class="card-list">
-        {% for item in subs_list %}
+        {% for item in page %}
         <div class="card-user" data-author="{{ item.author.id }}">
             <div class="card-user__header">
                 <h2 class="card-user__title"> {{ item.author.first_name }} {{ item.author.last_name }}</h2>
