--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -7,14 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Избранное</title>
     {% load static %}
-    {% load cache %}
     {% csrf_token %}
     {% load templates_extra %}
     <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 </head>
 <body class="body">
     {% include 'header.html' %}
-
     <main class="main container">
         <div class="main__header">
             <h1 class="main__title">Избранное</h1>
@@ -30,10 +28,7 @@
                         </li>
                     {% endfor %}
             </ul>
-
         </div>
-        {% cache 6 index_page %}
-    
         <div class="card-list">
             {% for recipe in page %}
         <div class="card" data-id="{{ recipe.id }}">
@@ -51,20 +46,11 @@
                 </div>
             </div>
             <div class="card__footer">
-                {% if recipe.id in shop_list %}
-                    <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
-                {% else %}
-                    <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-                {% endif %}
-                {% if recipe.title in favor_list %}
-                    <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
-                {% else %}
-                    <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
-                {% endif %}
+                {% include 'buy_button.html' %}
+                {% include 'favor_button.html' %}
             </div>
         </div>
     {% endfor %}
-    {% endcache %}
         </div>
         {% include 'paginator.html' %}
     </main>
