--- a/templates/recipe.html
+++ b/templates/recipe.html
@@ -19,14 +19,7 @@
                 <div class="single-card__header-info">
                     <h1 class="single-card__title"> {{ recipe.title }} </h1>
                     <div class="single-card__favorite">
-                        {% if user.is_authenticated %}
-                            {% if recipe.title in favor_list %}
-                                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
-                            {% else %}
-                                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
-                                <div class="single-card__favorite-tooltip tooltip">Добавить в избранное</div>
-                            {% endif %}
-                        {% endif %}
+                        {% include 'favor_button.html' %}
                     </div>
                 </div>
     
@@ -48,13 +41,7 @@
                     </ul>
                 </div>
                 <ul class="single-card__items">
-                    {% if user.is_authenticated %}
-                    {% if recipe.id in shop_list %}
-                    <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span> Рецепт добавлен</button>
-                    {% else %}
-                    <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
-                    {% endif %}
-                    {% endif %}
+                    {% include 'buy_button.html' %}
                     {% if user.username != profile.username %}
                     {% if user.is_authenticated %}
                         {% if subs %}
@@ -69,7 +56,7 @@
                     <h3 class="single-card__section-title">Ингредиенты:</h3>
                     <div class="single-card__items single-card__items_column">
                         {% for amount in recipe.amount_set.all %}
-                        <p class=" single-card__section-item">{{ amount.ingrindient.name }} - {{ amount.units }} {{ amount.ingrindient.dimension }}</p>
+                        <p class=" single-card__section-item">{{ amount.ingredient.title }} - {{ amount.units }} {{ amount.ingredient.dimension }}</p>
                         {% endfor %}
                     </div>
                 </div>
