--- a/users/templates/registration/logged_out.html
+++ b/users/templates/registration/logged_out.html
@@ -1,7 +1,18 @@
-{% extends "base.html" %}
-{% block title %}Вы вышли из системы{% endblock %}
-
-{% block content %}
+<!doctype html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+              content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Регистрация</title>
+        {% load static %}
+        <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+    </head>
+    <body>
+        {% include 'header.html' %}
+    <main>
+            <div class="container">
 <div class="row justify-content-center">
     <div class="col-md-8 p-5">
         <div class="card">
@@ -13,4 +24,9 @@
     </div> <!-- col -->
 </div> <!-- row -->
 
-{% endblock %}
+</div>
+</main>
+{% include 'footer.html' %}
+ 
+</body>
+</html>
